--- a/layouts/payment-application.mdx
+++ b/layouts/payment-application.mdx
@@ -310,7 +310,15 @@ category: 'payment'
                 <tbody>
                   <tr>
                     <td className="px-5 py-4 text-left border-b border-gray-200">
-                      Payment from Molly Sanders
+                      <div className="flex items-center">
+                        <div className="w-7">
+                          <svg className="w-4 h-auto fill-current text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor">
+                            <path fill-rule="evenodd" d="M0 4a2 2 0 012-2h12a2 2 0 012 2v8a2 2 0 01-2 2H2a2 2 0 01-2-2V4zm2-1a1 1 0 00-1 1v1h14V4a1 1 0 00-1-1H2zm13 4H1v5a1 1 0 001 1h12a1 1 0 001-1V7z" />
+                            <path d="M2 10a1 1 0 011-1h1a1 1 0 011 1v1a1 1 0 01-1 1H3a1 1 0 01-1-1v-1z" />
+                          </svg>
+                        </div>
+                        Payment from Molly Sanders
+                      </div>
                     </td>
                     <td className="px-5 py-4 text-left border-b border-gray-200">
                       <div className="inline-flex items-center text-gray-800">
@@ -318,7 +326,7 @@ category: 'payment'
                       </div>
                     </td>
                     <td className="px-5 py-4 text-left border-b border-gray-200">
-                      <div className="inline-flex items-center bg-green-100 text-green-600 font-medium rounded-full px-2 py-1 leading-none">
+                      <div className="inline-flex items-center bg-green-100 text-green-600 font-medium rounded-full px-3 py-1 leading-normal">
                         Success
                       </div>
                     </td>
@@ -345,7 +353,7 @@ category: 'payment'
                       </div>
                     </td>
                     <td className="px-5 py-4 text-left border-b border-gray-200">
-                      <div className="inline-flex items-center bg-yellow-100 text-yellow-600 font-medium rounded-full px-2 py-1 leading-none">
+                      <div className="inline-flex items-center bg-yellow-100 text-yellow-600 font-medium rounded-full px-3 py-1 leading-normal">
                         Processing
                       </div>
                     </td>
@@ -370,7 +378,7 @@ category: 'payment'
                       </div>
                     </td>
                     <td className="px-5 py-4 text-left">
-                      <div className="inline-flex items-center bg-gray-100 text-gray-700 font-medium rounded-full px-2 py-1 leading-none">
+                      <div className="inline-flex items-center bg-gray-100 text-gray-700 font-medium rounded-full px-3 py-1 leading-normal">
                         Failed
                       </div>
                     </td>
